# MIPT-Tasks

./: .gitignore  README.md  onegin.c  square_equations.c
Mondelcat/: CMakeLists.txt  bmp_reader.c  bmp_reader.h  cat_controller.c  cat_controller.h  color_blend.c  color_blend.h  game.c  game.h  main.c  mandelbrot_controller.c  mandelbrot_controller.h  mandelbrot_thread.c  mandelbrot_thread.h  messed_drawer.c  messed_drawer.h  videomemory.c  videomemory.h
Mondelcat/mandelbrot_methods/: draw_nosse.c  draw_nosse.h  draw_pd_128.c  draw_pd_128.h  draw_pd_128_messed.c  draw_pd_128_messed.h  draw_ps_128.c  draw_ps_128.h
charts/: CMakeLists.txt  drawing_context.cpp  drawing_context.hpp  dynamic_array.hpp  graph.cpp  graph.hpp  main.cpp  matrix3.cpp  matrix3.hpp  vec2.cpp  vec2.hpp
differentiator/: CMakeLists.txt  errors.c  grapher.c  main.c  phrases.h  simplifier.c  simplifier.h  tree.c  tree.h  tree_serializer.c  tree_serializer.h  utils.h
differentiator/parsing/grammatics/: grammatic_derivative.c  grammatic_math_expression.c  grammatic_math_expression.h  grammatic_math_factor.c  grammatic_math_factor.h  grammatic_math_term.c  grammatic_math_term.h  grammatic_number.h  grammatic_power_base.c  grammatic_power_base.h  grammatic_reference.h
year-1/fast-hash-table-clion/: CMakeLists.txt  asm.asm  benchmarks.cpp  benchmarks.h  dynamic_array.cpp  hash-table.cpp  list.cpp  list.hpp  main.cpp
year-2/copy-elisioner/: CMakeLists.txt  log.dot  log.html  log2.html
year-2/copy-elisioner/src/: collectior-guard.cpp  collectior-guard.hpp  dot-collector.cpp  dot-collector.hpp  html-formats.cpp  html-formats.hpp  logger-collector.cpp  logger-collector.hpp  main.cpp  smart-value.cpp  smart-value.hpp  statistics-collector.cpp  statistics-collector.hpp
year-2/moleculas/: CMakeLists.txt  drawing_context.cpp  drawing_context.hpp  main.cpp  user_controller.cpp  user_controller.hpp  world.cpp  world.hpp
year-2/moleculas/components/: component.cpp  component.hpp  entity.cpp  entity.hpp
year-2/moleculas/contacts/: circle_circle_contact.cpp  circle_circle_contact.hpp  circle_plane_contact.cpp  circle_plane_contact.hpp  contact.cpp  contact.hpp
year-2/moleculas/creatures/: circle.cpp  circle.hpp  creature.cpp  creature.hpp  plane.hpp
year-2/moleculas/fixtures/: circle_fixture.cpp  circle_fixture.hpp  fixture.cpp  fixture.hpp  plane_fixture.cpp  plane_fixture.hpp
year-2/moleculas/game/: interface_view.cpp  interface_view.hpp  scene.cpp  scene.hpp
year-2/moleculas/game/creatures/: circle.cpp  circle.hpp  game_object.cpp  game_object.hpp  plane.cpp  plane.hpp  super_circle.cpp  super_circle.hpp
year-2/moleculas/physics-engine/bodies/: body.cpp  body.hpp  circle_body.cpp  circle_body.hpp  plane_body.cpp  plane_body.hpp
year-2/moleculas/physics-engine/contacts/: circle_circle_contact.cpp  circle_circle_contact.hpp  circle_plane_contact.cpp  circle_plane_contact.hpp  contact.hpp
year-2/moleculas/physics-engine/world/: world.cpp  world.hpp
year-2/moleculas/utils/: dynamic_array.hpp  vec2.hpp  vec3.hpp
year-2/moleculas/visual-engine/: drawing_context.cpp  drawing_context.hpp  user_controller.cpp  user_controller.hpp  visual_component.cpp  visual_component.hpp
year-2/moleculas/visual-engine/ui/: ui_button.hpp  ui_slider.cpp  ui_slider.hpp  ui_text.cpp  ui_view.cpp  ui_view.hpp
year-2/photoshop/: CMakeLists.txt
year-2/photoshop/plugins/: libloochek_eraser.dylib
year-2/photoshop/resources/shaders/: rgb_mapping_effect_shader.shader
year-2/photoshop/src/: main.cpp
year-2/photoshop/src/app/: app.cpp  app.hpp  assets.cpp  assets.hpp  photoshop_view.cpp  photoshop_view.hpp  preferences_generator.cpp
year-2/photoshop/src/controls/: user_controller.cpp  user_controller.hpp
year-2/photoshop/src/events/: event_emitter.hpp  keyboard_events.hpp  mouse_events.hpp
year-2/photoshop/src/graphics/: drawable.cpp  drawable.hpp  drawable_texture.cpp  drawable_texture.hpp  drawing_context.cpp  drawing_context.hpp  drawing_target_texture.cpp  drawing_target_texture.hpp  drawing_target_window.hpp  text_drawer.cpp  text_drawer.hpp  texture.cpp  texture.hpp  textured.cpp  textured.hpp
year-2/photoshop/src/test_views/: dropping_menu_test.cpp  dropping_menu_test.hpp  stack_test_view.cpp  stack_test_view.hpp
year-2/photoshop/src/ui/: styled.cpp  ui_button.cpp  ui_button.hpp  ui_drawing_context.cpp  ui_drawing_context.hpp  ui_input.cpp  ui_input.hpp  ui_input_slider.cpp  ui_input_slider.hpp  ui_insets.hpp  ui_modal_container.cpp  ui_modal_container.hpp  ui_modal_view.hpp  ui_screen.cpp  ui_screen.hpp  ui_scroll_view.cpp  ui_select.cpp  ui_select.hpp  ui_select_modal.cpp  ui_select_modal.hpp  ui_shadow_view.cpp  ui_shadow_view.hpp  ui_slider.cpp  ui_slider.hpp  ui_stack.cpp  ui_stack.hpp  ui_text.cpp  ui_text.hpp  ui_view.cpp  ui_view.hpp
year-2/photoshop/src/utils/: dispatch_queue.cpp  dispatch_queue.hpp  dynamic_array.hpp  hsv.cpp  hsv.hpp  vec2.hpp  vec3.hpp  vec4.hpp
year-2/ray-casting/: CMakeLists.txt  camera.cpp  camera.hpp  drawing_context.cpp  drawing_context.hpp  dynamic_array.hpp  interface_view.cpp  interface_view.hpp  light.cpp  light.hpp  main.cpp  matrix4.cpp  matrix4.hpp  ray.cpp  ray.hpp  renderer.cpp  renderer.hpp  semaphores.h  sphere.hpp  user_controller.cpp  user_controller.hpp  user_viewport.cpp  user_viewport.hpp  vec2.hpp  vec3.cpp  vec3.hpp  world.cpp  world.hpp
year-2/ray-casting/events/: mouse_events.hpp
year-2/ray-casting/shapes/: sphere.cpp  sphere.hpp
year-2/ray-casting/ui/: point_test_iterator.cpp  point_test_iterator.hpp  ui_button.hpp  ui_slider.cpp  ui_slider.hpp  ui_text.hpp  ui_view.cpp  ui_view.hpp
year-2/ray-casting/utils/: dynamic_array.hpp  matrix3.hpp  vec2.hpp  vec4.hpp
year-2/sorting-sandbox/: CMakeLists.txt
year-2/sorting-sandbox/src/: main.cpp
year-2/sorting-sandbox/src/app/: adjustable.hpp  animation-view.cpp  animation-view.hpp  animation-window.cpp  animation-window.hpp  app-view.cpp  app-view.hpp  app.cpp  app.hpp  assets.cpp  assets.hpp  bubble-sort.cpp  bubble-sort.hpp  chart-view.cpp  chart-view.hpp  chart-window.cpp  smart-int.cpp  (+8 more)
(+867 files in other folders)
